test/integration/bad/lang/bad_decl1.stan
data {
  real x, int y;
}
